feat: simplify Drive SelfRun signal loop