@@ -18,6 +18,6 @@ public class SelfRunPauseResumeTest {
         assertFalse(baseline.contains("event.type"));
     }
 
-    private static String src(String f) throws Exception { Path p=Paths.get("app/src/main/java/com/shaterguy/chatgptselfrun/"+f); if(!Files.exists(p)) p=Paths.get("src/main/java/com/shaterguy/chatgptselfrun/"+f); return Files.readString(p); }
+    private static String src(String f) throws Exception { Path p=Paths.get("app/src/main/java/com/shaterguy/chatgptselfrun/"+f); if(!Files.exists(p)) p=Paths.get("src/main/java/com/shaterguy/chatgptselfrun/"+f); return new String(Files.readAllBytes(p), java.nio.charset.StandardCharsets.UTF_8); }
     private static String between(String s,String a,String b){ return s.substring(s.indexOf(a),s.indexOf(b)); }
 }
